Fix image spacing

--- a/src/app/(shop)/homepage.module.css
+++ b/src/app/(shop)/homepage.module.css
@@ -60,7 +60,7 @@
   background: var(--primary-p500);
   text-align: unset;
   padding: 32px 24px 140px;
-  margin-bottom: 118px;
+  margin-bottom: 145px;
   width: 336px;
 }
 
@@ -85,7 +85,7 @@
 
 .section.blue img {
   position: absolute;
-  bottom: -118px;
+  bottom: -145px;
   border-radius: 6px;
 }
 
